--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=18443
 server.address=localhost
 
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootdata?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/springbootdata?serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=root#admin
 # Display SQL Query
