--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,11 @@
     <dependencies>
         <!-- 验证码 -->
         <dependency>
-            <groupId>com.github.penggle</groupId>
+            <groupId>com.google.code</groupId>
             <artifactId>kaptcha</artifactId>
-            <version>2.3.2</version>
+            <version>2.3.2.1</version>
+            <!-- 从本地加载依赖 -->
+            <systemPath>${basedir}/lib/kaptcha-2.3.2.1.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -86,6 +88,8 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <!-- 允许从本地加载依赖 -->
+                    <includeSystemScope>true</includeSystemScope>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
