--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,14 @@
             <artifactId>kaptcha</artifactId>
             <version>2.3.2.1</version>
             <!-- 从本地加载依赖 -->
+            <scope>system</scope>
             <systemPath>${basedir}/lib/kaptcha-2.3.2.1.jar</systemPath>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.jhlabs/filters -->
+        <dependency>
+            <groupId>com.jhlabs</groupId>
+            <artifactId>filters</artifactId>
+            <version>2.0.235-1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
